--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Election Results</title>
+    <title>T_M Election Results</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
     <div class="container" style="width: 650px;">
       <div class="row">
         <div class="col-lg-12">
-          <h1 class="text-center">Election Results</h1>
+          <h1 class="text-center">T_M Election Results</h1>
           <hr/>
           <br/>
           <div id="loader">
@@ -36,24 +36,27 @@
                   <th scope="col">Votes</th>
                 </tr>
               </thead>
-              <tbody id="candidatesResults">
+              <tbody id="nomineesResult">
               </tbody>
             </table>
             <hr/>
+
             <form onSubmit="App.castVote(); return false;">
               <div class="form-group">
-                <label for="candidatesSelect">Select Candidate</label>
-                <select class="form-control" id="candidatesSelect">
+                <label for="nomineesSelect">Select nominee</label>
+                <select class="form-control" id="nomineesSelect">
                 </select>
               </div>
               <button type="submit" class="btn btn-primary">Vote</button>
               <hr />
+
             </form>
             <p id="accountAddress" class="text-center"></p>
           </div>
         </div>
       </div>
     </div>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
